--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8">
   <title>Module 4 Solution</title>
   <script src="SpeakHello.js"></script>
-  <script src="SpeakGoodBye.js"></script>
+  <script src="speakgoodbye.js"></script>
   <script src="script.js"></script>
   <style>
     body {background-color: black;}
